--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,11 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
+  fonts:
+    - family: Quicksand
+      fonts:
+        - asset: assets/Quicksand-Regular.ttf
+        - asset: assets/Quicksand-Medium.ttf
   uses-material-design: true
   assets:
     - assets/gifs/loading.gif
